# sofia-property-alert

./: .env.example  .gitignore  AGENTS.md  README.md  plans.md  pyproject.toml  vercel.json
.agents/skills/fullstack-feature/: SKILL.md
.agents/skills/fullstack-feature/agents/: openai.yaml
.codex/agents/: backend-engineer.toml  frontend-engineer.toml  integration-reviewer.toml
app/: __init__.py  catalog.py  config.py  db.py  main.py  migrations.py  models.py  schemas.py
app/email/: __init__.py  delivery.py
app/providers/: __init__.py  base.py  fixtures.py  parsers.py
app/services/: auth.py  jobs.py  listings.py  preview.py  scheduler.py  subscriptions.py
app/static/: app.css
app/templates/: index.html  reset_password.html
docs/: exam-journal.md  final-project-report.md  final_project_notes.txt
docs/backup/: final-project-report.md.bak  replace-context.txt
scripts/: run_pytest_clean.ps1
skills/update-exam-evidence/: SKILL.md
skills/update-exam-evidence/agents/: openai.yaml
skills/update-exam-evidence/assets/: exam-journal-template.md
skills/update-exam-evidence/references/: assignment-rubric.md
tests/: conftest.py  test_app_routes.py  test_config.py  test_email_digest.py  test_fixture_parser.py  test_job_service.py  test_scheduler_routes.py  test_scheduler_service.py
tests/fixtures/: imot_search_sample.html
