[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bulgaria-property-alert"
version = "0.1.0"
description = "FastAPI MVP for daily Bulgaria property listing alerts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "jinja2>=3.1,<4.0",
    "lxml>=5.3,<6.0",
    "pydantic-settings>=2.10,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.35,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "ruff>=0.12,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["skills*", "tests*", "var*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]